working capture - dropdown closes when click event occurs ouside of button/dropdown

--- a/event_handling/capture/style.css
+++ b/event_handling/capture/style.css
@@ -34,7 +34,7 @@ body {
   display: flex;
   justify-content: center;
   padding-top: 10px;
-  background-color: pink;
+  background-color: #ffffff;
 }
 
 #navbar {
